--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -30,7 +30,7 @@
 
 <!-- ここにモックのform要素を貼り付けます -->
 
-					<form method="post" action="../employee/list.html" th:action="@{/login}">
+					<form method="post" action="../employee/list.html" th:action="@{/login}" th:object="${loginForm}">
 						<fieldset>
 							<legend>ログイン</legend>
 							<div class="form-group">
@@ -39,12 +39,14 @@
 			                    </div>
 							</div>
 							<div class="form-group">
+								<div th:errors="*{mailAddress}" style="color:red"></div>
 								<label for="mailAddress">メールアドレス:</label>
-								<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="Email">
+								<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="Email" th:field="*{mailAddress}">
 							</div>
 							<div class="form-group">
+								<div th:errors="*{password}" style="color:red"></div>
 								<label for="inputPassword">パスワード:</label>
-								<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password">
+								<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" th:field="*{password}">
 							</div>
 							<div class="form-group">
 								<button type="submit" class="btn btn-primary">ログイン</button>
