--- a/src/main/resources/templates/administrator/login.html
+++ b/src/main/resources/templates/administrator/login.html
@@ -39,11 +39,13 @@
 			                    </div>
 							</div>
 							<div class="form-group">
+								<!-- 改修要望では管理者登録時だけ入力値チェックが必要だから本来はいらない -->
 								<div th:errors="*{mailAddress}" style="color:red"></div>
 								<label for="mailAddress">メールアドレス:</label>
 								<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="Email" th:field="*{mailAddress}">
 							</div>
 							<div class="form-group">
+								<!-- 改修要望では管理者登録時だけ入力値チェックが必要だから本来はいらない -->
 								<div th:errors="*{password}" style="color:red"></div>
 								<label for="inputPassword">パスワード:</label>
 								<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" th:field="*{password}">
