(1-3)Eメール重複時にエラーが出るよう修正

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -59,6 +59,9 @@
 										<label th:if="${#fields.hasErrors('mailAddress')}" th:errors="*{mailAddress}" class="error-messages">
 											メールアドレスを入力してください
 										</label>
+										<div class="alert alert-danger" th:if="${errorMessage}">
+			                        		<p th:text="${errorMessage}">このメールアドレスは既に登録されています</p>
+			                    		</div>
 										<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="yamada@mail.com"
 											 th:field="*{mailAddress}" th:errorclass="error-input" value="yamada@mail.com">
 									</div>
