(1-5)確認用パスワードの実装とエラー表示の実装

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -59,9 +59,6 @@
 										<label th:if="${#fields.hasErrors('mailAddress')}" th:errors="*{mailAddress}" class="error-messages">
 											メールアドレスを入力してください
 										</label>
-										<div class="alert alert-danger" th:if="${errorMessage}">
-			                        		<p th:text="${errorMessage}">このメールアドレスは既に登録されています</p>
-			                    		</div>
 										<input type="text" name="mailAddress" id="mailAddress" class="form-control" placeholder="yamada@mail.com"
 											 th:field="*{mailAddress}" th:errorclass="error-input" value="yamada@mail.com">
 									</div>
@@ -78,6 +75,14 @@
 											パスワードを入力してください
 										</label>
 										<input type="password" name="password" id="password" class="form-control" placeholder="password"
+											 th:field="*{password}" th:errorclass="error-input" value="xxxxxxxx">
+										<label for="passwaord">
+											確認用パスワード:
+										</label>
+										<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-messages">
+											確認用パスワードを入力してください
+										</label>
+										<input type="password" name="password" id="password" class="form-control" placeholder="確認用Password"
 											 th:field="*{password}" th:errorclass="error-input" value="xxxxxxxx">
 									</div>
 								</div>
