--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -63,6 +63,14 @@
 <!-- ここから上を編集する必要はありません -->
 
 <!-- ここにモックのtable要素を貼り付けます -->
+				<form th:action="@{/employee/showList}" method="post">
+				従業員検索：<input type="text" name="fuzzyName">
+				<button>検索</button>
+				</form><br>
+				<div th:if="${message}">
+	                <p th:text="${message}">1件もありませんでした。</p>
+			    </div>
+				<hr>
 
 				<table class="table table-striped">
 					<thead>
