--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -9,6 +9,7 @@
 <title>従業員管理システム</title>
 <link rel="stylesheet" href="../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}" >
 <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}" >
+<link type="text/css" rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/cupertino/jquery-ui.min.css" />
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -64,7 +65,7 @@
 
 <!-- ここにモックのtable要素を貼り付けます -->
 				<form th:action="@{/employee/showList}" method="post">
-				従業員検索：<input type="text" name="fuzzyName">
+				従業員検索：<input id="autoComplete_name" type="text" name="fuzzyName" placeholder="従業員名を入力">
 				<button>検索</button>
 				</form><br>
 				<div th:if="${message}">
@@ -108,5 +109,8 @@
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="../../static/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+	<script th:src="@{/js/autocomplete.js}"></script>
 </body>
 </html>
