従業員登録で任意の画像でも対応できるよう修正

--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -28,6 +28,7 @@
 							class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="list.html" th:href="@{/employee/showList}"> 
+					
 						<!-- 企業ロゴ -->
 						<img src="../../static/img/header_logo_small.png" th:src="@{/img/header_logo_small.png}">
 					</a>
@@ -38,6 +39,7 @@
 					id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="list.html" th:href="@{/employee/showList}">従業員管理</a></li>
+						<li class="active"><a href="employee/insert.html" th:href="@{/employee/toInsert}">従業員登録</a></li>
 					</ul>
 					<p class="navbar-text navbar-right">
 					   <span th:text="${session.administratorName}">山田太郎</span>さんこんにちは！
@@ -85,7 +87,8 @@
 							      写真
 							    </th>
 							    <td>
-							      <img src="../../static/img/e2.png" th:src="${'/img/' + employee.image}" />
+							      <!-- <img src="../../static/img/e2.png" th:src="${'/img/' + employee.image}" /> -->
+							      <img th:src="${employee.image}" />
 							    </td>
 							  </tr>
 							  <tr>
