--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -17,7 +17,9 @@
 		<!-- 上余白 -->
 		<div class="row">
 			<div class="col-lg-offset-0 col-lg-6 col-md-8 col-sm-10 col-xs-12">
-				<img src="../../static/img/header_logo.png" th:src="@{/img/header_logo.png}">
+				<a th:href="@{/}">
+					<img src="../../static/img/header_logo.png" th:src="@{/img/header_logo.png}">
+				</a>
 			</div>
 		</div>
 		<!-- login form -->
